# atomvs-timeblock-terminal

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.test  README.md  SECURITY.md  demo.cast  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  mirror-branch-sync.yml
cli/: .gitignore  pyproject.toml  pytest.ini  requirements.txt
cli/src/timeblock/: __init__.py  config.py  database.py  database.py.bak  main.py  models.py
cli/tests/: conftest.py
cli/tests/e2e/: test_habit_lifecycle.py  test_list_command.py  test_task_lifecycle.py  test_timer_lifecycle.py
cli/tests/factories/: __init__.py
cli/tests/integration/: conftest.py  test_fixtures_validation.py  test_init_command.py  test_list_command.py  test_logging_integration.py  test_main_commands.py
cli/tests/unit/: conftest.py  test_ci_protection.py  test_event_date_filters.py  test_event_list_presenter.py  test_formatters.py  test_list_helpers.py  test_queries_build.py  test_queries_fetch.py  test_queries_fixtures.py  test_validators_color.py  test_validators_edge_cases.py  test_validators_range.py  test_validators_time.py
docs/01-architecture/: 09-decisions-index.md
docs/03-decisions/: ADR-020-business-rules-nomenclature.md
docs/04-specifications/business-rules/: routine.md
docs/06-bdd/scenarios/: routine.feature
docs/99-audit/: extract-brs.sh  extract-scenarios.sh  extract-tests.sh
docs/core/: architecture.md  business-rules.md  cicd-flow.md  cli-reference.md  development.md  quality-metrics.md  roadmap.md  sprints.md  technical-debt.md  workflows.md
docs/decisions/: ADR-001-sqlmodel-orm.md  ADR-002-typer-cli.md  ADR-003-event-reordering.md  ADR-004-habit-vs-instance.md  ADR-005-resource-first-cli.md  ADR-006-textual-tui.md  ADR-007-service-layer.md  ADR-008-tuple-returns.md  ADR-009-flags-consolidation.md  ADR-010-recurrence-model.md  ADR-011-conflict-philosophy.md  ADR-012-sync-strategy.md  ADR-013-offline-first-schema.md  ADR-014-sync-ux-flow.md  ADR-015-habitinstance-naming.md  ADR-016-alembic-timing.md  ADR-017-environment-strategy.md  ADR-018-language-standards.md  ADR-019-test-naming-convention.md  ADR-020-business-rules-nomenclature.md  ADR-021-status-substatus-refactoring.md  ADR-022-pause-tracking-simplification.md  ADR-023-microservices-ecosystem.md  ADR-024-homelab-infrastructure.md  ADR-025-development-methodology.md  ADR-026-test-database-isolation.md  ADR-027-documentation-tooling.md  ADR-028-remove-legacy-commands.md  ADR-029-package-by-feature.md  ADR-030-multiplatform-architecture.md  ADR-031-tui-implementation.md  ADR-032-branding-repository-naming.md  ADR-033-fixture-session-rollback.md  ADR-034-dashboard-first-crud.md  ADR-035-keybindings-standardization.md  ADR-036-task-lifecycle-evolution.md  ADR-037-tui-keybindings-standard.md  ADR-038-dashboard-interaction-patterns.md  ADR-039-documentation-framework.md  ADR-040-unified-database-path.md  (+12 more)
docs/decisions/archived/: ADR-031-tui-implementation-v1-initial.md  ADR-031-tui-implementation-v2-expanded.md
docs/diagrams/activity/: habit-execution.md  user-daily-flow.md
docs/diagrams/architecture/: system-overview.md
docs/diagrams/c4-model/: L1-system-context.md  L2-containers.md  L3-components-core.md
docs/diagrams/data/: class-diagram.md  er-diagram.md
docs/diagrams/infrastructure/: deployment.md
docs/diagrams/sequences/: event-reordering.md  habit-generation.md  habit-instantiation.md  timer-flow.md
docs/diagrams/states/: event-states.md  task-lifecycle.md  timer-states.md
docs/explanation/: agenda-overlap-rendering.md  architecture.md  development-methodology.md  domain-concepts.md  quality-barriers-research.md
docs/guides/: ci-optimization.md  cicd-flow.md  development-workflow.md  docs-inventory.md  manual-testing-checklist.md  refactoring-catalog.md  release-strategy.md  snapshot-testing.md  testing-patterns.md
docs/html/themes/: catppuccin-mocha.html
docs/reference/: agenda-panel-mockup-reference.md  cli-reference.md  quality-metrics.md  roadmap.md  sprints-archive.md  sprints.md  technical-debt-analysis.md  technical-debt.md  workflows.md
docs/reference/business-rules/: br-cli.md  br-data.md  br-event.md  br-habit.md  br-habitinstance.md  br-obs.md  br-reorder.md  br-routine.md  br-skip.md  br-streak.md  br-tag.md  br-task.md  br-testing.md  br-timer.md  br-tui.md  br-validation.md  index.md
docs/reference/tui/: color-system.md  dashboard-cards-spec.md  (+3 more)
docs/ssot/: architecture.md  business-rules.md  cicd-flow.md  cli-reference.md  quality-metrics.md  roadmap.md  technical-debt.md  workflows.md
docs/tui/: box-drawing.md  dashboard-mockup-v1.md  dashboard-mockup-v3.md  manual-testing-checklist.md  routines-weekly-mockup.md
docs/tutorials/: developer-reference.md
scripts/: ci-local.sh  demo.sh  lint-i18n.py  migrate_backups_to_xdg.py  push-github.sh  push-gitlab.sh  test-cicd.sh
src/timeblock/: __init__.py  main.py
tests/: conftest.py
tests/e2e/: conftest.py  test_dashboard_complete.py  test_dashboard_coverage.py  test_event_creation.py  test_first_complete_loop.py  test_habit_lifecycle.py  test_panel_flows.py  test_snapshot_coverage.py  test_snapshot_cruds.py  test_snapshots.py  test_timer_lifecycle.py
tests/factories/: factories.py
tests/integration/: conftest.py  test_logging_integration.py
(+339 files in other folders)
