[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomvs-timeblock-terminal"
version = "1.7.2"
description = "Terminal-based time management with CLI and TUI interfaces"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Fábio de Lima", email = "fabiodelllima@gmail.com" },
]
keywords = ["time-management", "habits", "terminal", "tui", "cli", "atomic-habits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.19.0",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "python-dateutil>=2.9.0",
    "python-json-logger>=3.0.0",
]

[project.urls]
Repository = "https://gitlab.com/delimafabio/atomvs-timeblock-terminal"
Mirror = "https://github.com/fabiodelllima/atomvs-timeblock-terminal"
Documentation = "https://gitlab.com/delimafabio/atomvs-timeblock-terminal/-/tree/develop/docs"
Changelog = "https://gitlab.com/delimafabio/atomvs-timeblock-terminal/-/blob/develop/CHANGELOG.md"


[project.optional-dependencies]
tui = [
    "textual>=0.89.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-bdd>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5",
    "freezegun>=1.5.0",
    "coverage>=7.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "types-python-dateutil>=2.9.0",
    "textual-dev>=1.7.0",
    "pytest-textual-snapshot>=1.1.0",
    "syrupy>=5.1.0",
]

[project.scripts]
atomvs = "timeblock.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:sqlmodel",
    "ignore::DeprecationWarning:pydantic",
]

[tool.coverage.run]
relative_files = true
source = ["src/timeblock"]
omit = ["tests/*", "*/venv/*", "*/commands/demo.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = "venv"
